--- a/src/main/resources/ui/pages/auth.fxml
+++ b/src/main/resources/ui/pages/auth.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -10,9 +11,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.AuthenticationUIController">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="697.0" style="-fx-background-color: white; -fx-background-radius: 20px;" stylesheets="@../mystyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -31,53 +31,15 @@
                      <children>
                         <HBox spacing="10.0">
                            <children>
-                              <JFXButton maxWidth="1.7976931348623157E308" ripplerFill="WHITE" styleClass="custom-btn" text="Sign in" textFill="#4485ff" HBox.hgrow="ALWAYS">
-                                 <font>
-                                    <Font name="Roboto" size="12.0" />
-                                 </font>
-                              </JFXButton>
-                              <JFXButton layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" ripplerFill="WHITE" styleClass="custom-btn" text="Sign up" textFill="#4485ff" HBox.hgrow="ALWAYS">
-                                 <font>
-                                    <Font name="Roboto" size="12.0" />
-                                 </font>
-                              </JFXButton>
+                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSignInMenu" styleClass="custom-btn" text="Sign in" HBox.hgrow="ALWAYS" />
+                              <Button layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSignUpMenu" styleClass="custom-btn" text="Sign up" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <TabPane layoutX="34.0" layoutY="130.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TabPane fx:id="mainTabPane" layoutX="34.0" layoutY="130.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <tabs>
-                                  <Tab style="-fx-opacity: 0;" text="Untitled Tab 1">
-                                    <content>
-                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                             <children>
-                                                <VBox alignment="CENTER" layoutX="98.0" layoutY="57.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                   <children>
-                                                      <VBox spacing="20.0">
-                                                         <VBox.margin>
-                                                            <Insets />
-                                                         </VBox.margin>
-                                                         <children>
-                                                            <TextField promptText="Username" />
-                                                            <TextField layoutX="10.0" layoutY="10.0" promptText="Password" />
-                                                            <TextField layoutX="30.0" layoutY="56.0" promptText="Confirm password" />
-                                                            <TextField layoutX="30.0" layoutY="101.0" promptText="Email" />
-                                                            <JFXButton maxWidth="1.7976931348623157E308" ripplerFill="WHITE" styleClass="custom-btn" text="Sign Up" />
-                                                         </children>
-                                                         <padding>
-                                                            <Insets left="20.0" right="20.0" />
-                                                         </padding>
-                                                      </VBox>
-                                                   </children>
-                                                   <padding>
-                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                   </padding>
-                                                </VBox>
-                                             </children>
-                                          </AnchorPane>
-                                    </content>
-                                  </Tab>
-                                    <Tab style="-fx-opacity: 0;" text="Untitled Tab 1">
+                                    <Tab style="-fx-opacity: 0;" text="Sign in">
                                        <content>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
@@ -88,9 +50,9 @@
                                                             <Insets />
                                                          </VBox.margin>
                                                          <children>
-                                                            <TextField promptText="Username" />
-                                                            <TextField layoutX="10.0" layoutY="10.0" promptText="Password" />
-                                                            <JFXButton maxWidth="1.7976931348623157E308" ripplerFill="WHITE" styleClass="custom-btn" text="Sign in" />
+                                                            <TextField fx:id="SIUsername" promptText="Username" />
+                                                            <PasswordField fx:id="SIPassword" promptText="Password" />
+                                                            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSignIn" styleClass="custom-btn" text="Sign In" />
                                                          </children>
                                                          <padding>
                                                             <Insets left="20.0" right="20.0" />
@@ -105,6 +67,36 @@
                                           </AnchorPane>
                                        </content>
                                     </Tab>
+                                  <Tab style="-fx-opacity: 0;" text="Sign up">
+                                    <content>
+                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <VBox alignment="CENTER" layoutX="98.0" layoutY="57.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <children>
+                                                      <VBox spacing="20.0">
+                                                         <VBox.margin>
+                                                            <Insets />
+                                                         </VBox.margin>
+                                                         <children>
+                                                            <TextField fx:id="SUUsername" promptText="Username" />
+                                                            <PasswordField fx:id="SUPassword" promptText="Password" />
+                                                            <PasswordField fx:id="SUCPassword" layoutX="30.0" layoutY="56.0" promptText="Confirm Password" />
+                                                            <TextField fx:id="SUEmail" layoutX="30.0" layoutY="101.0" promptText="Email" />
+                                                            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSignUp" styleClass="custom-btn" text="Sign Up" />
+                                                         </children>
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </VBox>
+                                                   </children>
+                                                   <padding>
+                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                   </padding>
+                                                </VBox>
+                                             </children>
+                                          </AnchorPane>
+                                    </content>
+                                  </Tab>
                                 </tabs>
                               </TabPane>
                            </children>
