--- a/src/main/resources/ui/mystyle.css
+++ b/src/main/resources/ui/mystyle.css
@@ -47,6 +47,11 @@
     -fx-font-size: 18px;
 }
 
+.text-area {
+    -fx-font-family: Roboto;
+    -fx-font-size: 16px;
+}
+
 .label {
     -fx-font-size: 16px;
 }
