--- a/src/main/resources/ui/pages/dash.fxml
+++ b/src/main/resources/ui/pages/dash.fxml
@@ -1457,7 +1457,7 @@
                                                                   </HBox>
                                                                   <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" VBox.vgrow="ALWAYS">
                                                                      <content>
-                                                                        <HBox spacing="10.0">
+                                                                        <HBox fx:id="BCategoryHolder" spacing="10.0">
                                                                            <children>
                                                                               <VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" style="-fx-border-width: 1px; -fx-border-color: #26a8ff;">
                                                                                  <children>
@@ -1470,7 +1470,7 @@
                                                                                           </Label>
                                                                                        </children>
                                                                                        <padding>
-                                                                                          <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
+                                                                                          <Insets bottom="10.0" top="10.0" />
                                                                                        </padding>
                                                                                     </HBox>
                                                                                     <HBox alignment="CENTER_LEFT" layoutX="11.0" layoutY="11.0" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0" style="-fx-border-color: #26a8ff;">
@@ -1482,6 +1482,14 @@
                                                                                                 <HBox alignment="CENTER_RIGHT">
                                                                                                    <children>
                                                                                                       <Label text="2022-02-10" textFill="RED" />
+                                                                                                   </children>
+                                                                                                </HBox>
+                                                                                                <Separator layoutX="10.0" layoutY="65.0" prefWidth="200.0" />
+                                                                                                <HBox alignment="CENTER" layoutX="10.0" layoutY="73.0" spacing="10.0">
+                                                                                                   <children>
+                                                                                                      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="custom-btn" text="&lt;" HBox.hgrow="ALWAYS" />
+                                                                                                      <Button layoutX="136.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="custom-btn" text="DONE" HBox.hgrow="ALWAYS" />
+                                                                                                      <Button layoutX="136.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="custom-btn" text="&gt;" HBox.hgrow="ALWAYS" />
                                                                                                    </children>
                                                                                                 </HBox>
                                                                                              </children>
@@ -1513,42 +1521,6 @@
                                                                                        </padding>
                                                                                     </HBox>
                                                                                     <HBox alignment="CENTER_LEFT" layoutX="16.0" layoutY="167.0" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0" style="-fx-border-color: #26a8ff;">
-                                                                                       <children>
-                                                                                          <VBox spacing="5.0" HBox.hgrow="ALWAYS">
-                                                                                             <children>
-                                                                                                <Label text="Task description about something" wrapText="true" />
-                                                                                                <Separator prefWidth="200.0" />
-                                                                                                <HBox alignment="CENTER_RIGHT">
-                                                                                                   <children>
-                                                                                                      <Label text="2022-02-10" textFill="RED" />
-                                                                                                   </children>
-                                                                                                </HBox>
-                                                                                             </children>
-                                                                                          </VBox>
-                                                                                       </children>
-                                                                                       <padding>
-                                                                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                                                       </padding>
-                                                                                    </HBox>
-                                                                                    <HBox alignment="CENTER_LEFT" layoutX="16.0" layoutY="264.0" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0" style="-fx-border-color: #26a8ff;">
-                                                                                       <children>
-                                                                                          <VBox spacing="5.0" HBox.hgrow="ALWAYS">
-                                                                                             <children>
-                                                                                                <Label text="Task description about something" wrapText="true" />
-                                                                                                <Separator prefWidth="200.0" />
-                                                                                                <HBox alignment="CENTER_RIGHT">
-                                                                                                   <children>
-                                                                                                      <Label text="2022-02-10" textFill="RED" />
-                                                                                                   </children>
-                                                                                                </HBox>
-                                                                                             </children>
-                                                                                          </VBox>
-                                                                                       </children>
-                                                                                       <padding>
-                                                                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                                                       </padding>
-                                                                                    </HBox>
-                                                                                    <HBox alignment="CENTER_LEFT" layoutX="16.0" layoutY="362.0" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0" style="-fx-border-color: #26a8ff;">
                                                                                        <children>
                                                                                           <VBox spacing="5.0" HBox.hgrow="ALWAYS">
                                                                                              <children>
@@ -1804,11 +1776,47 @@
                                                                   </ScrollPane>
                                                                   <HBox alignment="CENTER_RIGHT" spacing="10.0">
                                                                      <children>
-                                                                        <Button mnemonicParsing="false" styleClass="custom-btn" text="Create task" />
-                                                                        <Button layoutX="704.0" layoutY="10.0" mnemonicParsing="false" styleClass="custom-btn" text="Create category" />
+                                                                        <Button mnemonicParsing="false" onAction="#onTCTask" styleClass="custom-btn" text="Create task" />
+                                                                        <Button layoutX="704.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBCCategory" styleClass="custom-btn" text="Create category" />
                                                                      </children>
                                                                   </HBox>
                                                                </children>
+                                                            </VBox>
+                                                         </children>
+                                                      </VBox>
+                                                   </children>
+                                                </AnchorPane>
+                                             </content>
+                                          </Tab>
+                                          <Tab style="-fx-opacity: 0;" text="Create category">
+                                             <content>
+                                                <AnchorPane>
+                                                   <children>
+                                                      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                         <children>
+                                                            <VBox spacing="10.0" VBox.vgrow="ALWAYS">
+                                                               <children>
+                                                                  <VBox layoutX="20.0" layoutY="20.0">
+                                                                     <children>
+                                                                        <Label text="Category Info" />
+                                                                        <Separator prefWidth="200.0" />
+                                                                     </children>
+                                                                  </VBox>
+                                                                  <HBox spacing="20.0">
+                                                                     <children>
+                                                                        <TextField fx:id="CCNameInput" promptText="Category name" />
+                                                                     </children>
+                                                                  </HBox>
+                                                                  <Pane VBox.vgrow="ALWAYS" />
+                                                                  <HBox alignment="CENTER_RIGHT">
+                                                                     <children>
+                                                                        <Button mnemonicParsing="false" onAction="#onCreateCategory" styleClass="custom-btn" text="Create category" />
+                                                                     </children>
+                                                                  </HBox>
+                                                               </children>
+                                                               <padding>
+                                                                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                               </padding>
                                                             </VBox>
                                                          </children>
                                                       </VBox>
