--- a/src/main/resources/ui/pages/dash.fxml
+++ b/src/main/resources/ui/pages/dash.fxml
@@ -1420,9 +1420,10 @@
                                                                         </ScrollPane>
                                                                      </children>
                                                                   </VBox>
-                                                                  <HBox alignment="CENTER_RIGHT">
+                                                                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
                                                                      <children>
-                                                                        <Button mnemonicParsing="false" onAction="#onCreateTask" styleClass="custom-btn" text="Create Task" />
+                                                                        <Button layoutX="913.0" layoutY="10.0" mnemonicParsing="false" onAction="#onCreateTask" styleClass="custom-btn" text="Clear" />
+                                                                        <Button layoutX="913.0" layoutY="10.0" mnemonicParsing="false" onAction="#onCreateTask" styleClass="custom-btn" text="Create Task" />
                                                                      </children>
                                                                   </HBox>
                                                                </children>
