--- a/src/main/resources/ui/pages/dash.fxml
+++ b/src/main/resources/ui/pages/dash.fxml
@@ -1124,6 +1124,11 @@
                                                                         <TextField promptText="Search task by title" />
                                                                      </children>
                                                                   </VBox>
+                                                                  <HBox>
+                                                                     <children>
+                                                                        <ComboBox prefWidth="150.0" promptText="Deadline" />
+                                                                     </children>
+                                                                  </HBox>
                                                                   <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
                                                                      <content>
                                                                         <VBox spacing="10.0">
@@ -1134,7 +1139,7 @@
                                                                                     <Label layoutX="21.0" layoutY="43.0" text="Priority" />
                                                                                     <Label layoutX="79.0" layoutY="21.0" text="Team name" />
                                                                                     <Pane HBox.hgrow="ALWAYS" />
-                                                                                    <ProgressBar prefWidth="200.0" progress="0.86" />
+                                                                                    <Label layoutX="155.0" layoutY="21.0" text="2022-02-03" />
                                                                                  </children>
                                                                                  <padding>
                                                                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -1146,31 +1151,31 @@
                                                                                     <Label layoutX="21.0" layoutY="43.0" text="Priority" />
                                                                                     <Label layoutX="79.0" layoutY="21.0" text="Team name" />
                                                                                     <Pane HBox.hgrow="ALWAYS" />
-                                                                                    <ProgressBar prefWidth="200.0" progress="0.61" />
+                                                                                    <Label layoutX="155.0" layoutY="21.0" text="2022-02-03" />
                                                                                  </children>
                                                                                  <padding>
                                                                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                                                  </padding>
                                                                               </HBox>
-                                                                              <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="72.0" spacing="10.0" style="-fx-border-color: #26a8ff; -fx-background-radius: 5px; -fx-border-radius: 5px;">
+                                                                              <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="77.0" spacing="10.0" style="-fx-border-color: #26a8ff; -fx-background-radius: 5px; -fx-border-radius: 5px;">
                                                                                  <children>
                                                                                     <Label text="Task title" />
                                                                                     <Label layoutX="21.0" layoutY="43.0" text="Priority" />
                                                                                     <Label layoutX="79.0" layoutY="21.0" text="Team name" />
                                                                                     <Pane HBox.hgrow="ALWAYS" />
-                                                                                    <ProgressBar prefWidth="200.0" progress="0.48" />
+                                                                                    <Label layoutX="155.0" layoutY="21.0" text="2022-02-03" />
                                                                                  </children>
                                                                                  <padding>
                                                                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                                                  </padding>
                                                                               </HBox>
-                                                                              <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="123.0" spacing="10.0" style="-fx-border-color: #26a8ff; -fx-background-radius: 5px; -fx-border-radius: 5px;">
+                                                                              <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="134.0" spacing="10.0" style="-fx-border-color: #26a8ff; -fx-background-radius: 5px; -fx-border-radius: 5px;">
                                                                                  <children>
                                                                                     <Label text="Task title" />
                                                                                     <Label layoutX="21.0" layoutY="43.0" text="Priority" />
                                                                                     <Label layoutX="79.0" layoutY="21.0" text="Team name" />
                                                                                     <Pane HBox.hgrow="ALWAYS" />
-                                                                                    <ProgressBar prefWidth="200.0" progress="0.73" />
+                                                                                    <Label layoutX="155.0" layoutY="21.0" text="2022-02-03" />
                                                                                  </children>
                                                                                  <padding>
                                                                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -1248,7 +1253,7 @@
                                                                         <Insets />
                                                                      </VBox.margin>
                                                                      <children>
-                                                                        <TextField promptText="Search member by name" />
+                                                                        <TextField fx:id="AMSearchInput" promptText="Search member by name" />
                                                                      </children>
                                                                   </VBox>
                                                                   <HBox />
@@ -1383,7 +1388,7 @@
                                                                   </VBox>
                                                                   <HBox>
                                                                      <children>
-                                                                        <TextField promptText="Search user by id" HBox.hgrow="ALWAYS" />
+                                                                        <TextField fx:id="TTMSearchInput" promptText="Search user by id" HBox.hgrow="ALWAYS" />
                                                                      </children>
                                                                   </HBox>
                                                                   <VBox spacing="10.0" VBox.vgrow="ALWAYS">
